k8s/audio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pivis-audio
  namespace: pivis
spec:
  selector:
    app: pivis-audio
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
